# btleplug

./: Cargo.toml
examples/: discover_adapters_peripherals.rs  event_driven_discovery.rs  subscribe_notify_characteristic.rs
src/: lib.rs  models.rs  platform.rs
src/api/: bdaddr.rs  mod.rs
src/corebluetooth/: framework.rs  peripheral.rs
src/droidplug/: peripheral.rs
src/web/: adapter.rs  manager.rs  mod.rs  peripheral.rs  tauri.rs  utils.rs
src/winrtble/: peripheral.rs
~examples/: lights.rs
