[package]
name = "btleplug"
version = "0.11.5"
authors = ["Nonpolynomial, LLC <kyle@nonpolynomial.com>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
repository = "https://github.com/deviceplug/btleplug"
homepage = "https://github.com/deviceplug/btleplug"
edition = "2024"
description = """
A Cross-Platform Rust Bluetooth Low Energy (BLE) GATT
library.
"""
readme = "README.md"
keywords = ["bluetooth", "BLE", "bluez", "uwp", "corebluetooth"]
categories = ["hardware-support"]

[lib]
name = "btleplug"
path = "src/lib.rs"

[features]
default = ["serde"]
serde = ["uuid/serde", "dep:serde", "serde_bytes"]

[target.'cfg(not(target_arch = "xtensa"))'.dependencies]
async-trait = "0.1.76"
log = "0.4.20"
bitflags = "2.4.1"
thiserror = "1.0.53"
uuid = { version = "=1.12", features = ["v4"] }
serde = { version = "1.0.193", features = ["derive"], default-features = false, optional = true }
serde_bytes = { version = "0.11.13", optional = true }
dashmap = "5.5.3"
futures = "0.3.30"
static_assertions = "1.1.0"
# rt feature needed for block_on in macOS internal thread
tokio = { version = "1.35.1", default-features = false, features = ["macros", "sync", "rt"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
bimap = "0.6.3"
enumflags2 = { version = "0.7", features = ["serde"] }
serde_with = "3.12.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tauri-sys = { git = "https://github.com/Catchawink/tauri-sys.git", branch = "v2", features = ["all"] }
gloo-console = "0.3.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
async-std = { version = "1.13", features = ["attributes", "tokio1"] }
serde_json = "1.0.109"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.7"
bluez-async = "0.7.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
once_cell = "1.19.0"
jni-utils = "0.1.1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
libc = "0.2.151"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = ["Devices_Bluetooth", "Devices_Bluetooth_GenericAttributeProfile", "Devices_Bluetooth_Advertisement", "Devices_Radios", "Foundation_Collections", "Foundation", "Storage_Streams"] }

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.web-sys]
version = "0.3.72"
features = [
	"Bluetooth", "BluetoothDevice", "BluetoothRemoteGattServer", "BluetoothRemoteGattService", "BluetoothRemoteGattCharacteristic", "BluetoothCharacteristicProperties", "BluetoothRemoteGattDescriptor", 
	
	"Navigator", "RequestDeviceOptions", "DomException"
	]

[dev-dependencies]
rand = "0.8.5"
pretty_env_logger = "0.5.0"
serde_json = "1.0.109"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
getrandom = { version = "0.3.1" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt"] }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
